Issue 3463 Signup form shifts left @width - 768px

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -82,15 +82,15 @@ body {
 @media (max-width: 768px) {
   .center-image {
     display: none;
-    flex: 0 0 100% !important;
-    max-width: 100% !important;
+    flex: 0 0 100% ;
+    max-width: 100% ;
   }
 }
 
 @media  (max-width: 768px) {
   .center-text{
-    flex: 0 0 100% !important;
-    max-width: 100% !important;
+    flex: 0 0 100% ;
+    max-width: 100% ;
   }
 }
 
